--- a/Praticascreem.Android/Praticascreem.Android.csproj
+++ b/Praticascreem.Android/Praticascreem.Android.csproj
@@ -127,6 +127,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Usuario.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\editar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\remove.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
