--- a/Praticascreem.iOS/Praticascreem.iOS.csproj
+++ b/Praticascreem.iOS/Praticascreem.iOS.csproj
@@ -150,4 +150,10 @@
       <Name>Praticascreem</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\remove.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\editar.png" />
+  </ItemGroup>
 </Project>
