--- a/Praticascreem.Android/Praticascreem.Android.csproj
+++ b/Praticascreem.Android/Praticascreem.Android.csproj
@@ -133,6 +133,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\remove.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\usericon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\gradiente.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
