--- a/Praticascreem.iOS/Praticascreem.iOS.csproj
+++ b/Praticascreem.iOS/Praticascreem.iOS.csproj
@@ -156,4 +156,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\editar.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\usericon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\gradiente.jpg" />
+  </ItemGroup>
 </Project>
