--- a/Praticascreem/Praticascreem.csproj
+++ b/Praticascreem/Praticascreem.csproj
@@ -35,7 +35,7 @@
     <EmbeddedResource Update="Page2.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Paginaprincipal.xaml">
+    <EmbeddedResource Update="PaginaPrincipal.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\CambiarContraseña.xaml">
