--- a/Praticascreem.Android/Praticascreem.Android.csproj
+++ b/Praticascreem.Android/Praticascreem.Android.csproj
@@ -148,6 +148,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\insertarimagen.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\camara.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
